bridges/jac-bridge/tests/ui/unsupported_param_type.stderr
error: unsupported bridge type: `f64`
 --> tests/ui/unsupported_param_type.rs:9:30
  |
9 |         pub fn bad(&self, x: f64) -> bool {
  |                              ^^^
